# dataset-edinet

./: README.md  dbt_project.yml  fdl.toml  main.py  profiles.yml  pyproject.toml
.github/workflows/: sync.yml
edinet/: client.py  codelist.py
models/main/mart/: mart_business_results.sql  mart_business_results.yml  mart_companies.sql  mart_companies.yml  mart_documents.sql  mart_documents.yml  mart_funds.sql  mart_funds.yml
models/main/raw/: _schema.yml  _sources.yml  raw_companies.sql  raw_documents.sql  raw_financial_facts.sql  raw_funds.sql
models/main/stg/: stg_companies.sql  stg_documents.sql  stg_financial_facts.sql  stg_financial_facts.yml  stg_funds.sql
scripts/: build.sh
seeds/: _schema.yml  doc_types.csv
